// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > snapshot: checkbox marcado 1`] = `
<div>
  <label
    class="group flex items-start gap-3 rounded-md border border-input-border bg-input-bg px-4 py-3 transition-all duration-200 ease-in-out hover:border-border-strong hover:bg-input-bg cursor-pointer"
    for="test-checkbox-checked"
  >
    <div
      class="relative mt-1 flex h-5 w-5 items-center justify-center"
    >
      <input
        checked=""
        class="absolute inset-0 z-10 w-full h-full opacity-0 cursor-pointer peer"
        id="test-checkbox-checked"
        readonly=""
        type="checkbox"
      />
      <span
        class="flex items-center justify-center transition-colors duration-200 peer-focus-visible:outline-none peer-focus-visible:ring-2 peer-focus-visible:ring-focus-ring peer-focus-visible:ring-offset-2 peer-focus-visible:ring-offset-surface-glass text-accent-lime"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-square-check h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
      </span>
    </div>
    <span
      class="flex-1 text-sm text-input-text"
    >
      <span
        class="font-medium"
      >
        Selecionado
      </span>
    </span>
  </label>
</div>
`;

exports[`Checkbox > snapshot: checkbox não marcado 1`] = `
<div>
  <label
    class="group flex items-start gap-3 rounded-md border border-input-border bg-input-bg px-4 py-3 transition-all duration-200 ease-in-out hover:border-border-strong hover:bg-input-bg cursor-pointer"
    for="test-checkbox"
  >
    <div
      class="relative mt-1 flex h-5 w-5 items-center justify-center"
    >
      <input
        class="absolute inset-0 z-10 w-full h-full opacity-0 cursor-pointer peer"
        id="test-checkbox"
        type="checkbox"
      />
      <span
        class="flex items-center justify-center transition-colors duration-200 peer-focus-visible:outline-none peer-focus-visible:ring-2 peer-focus-visible:ring-focus-ring peer-focus-visible:ring-offset-2 peer-focus-visible:ring-offset-surface-glass text-input-text"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-square-dashed h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 3a2 2 0 0 0-2 2"
          />
          <path
            d="M19 3a2 2 0 0 1 2 2"
          />
          <path
            d="M21 19a2 2 0 0 1-2 2"
          />
          <path
            d="M5 21a2 2 0 0 1-2-2"
          />
          <path
            d="M9 3h1"
          />
          <path
            d="M9 21h1"
          />
          <path
            d="M14 3h1"
          />
          <path
            d="M14 21h1"
          />
          <path
            d="M3 9v1"
          />
          <path
            d="M21 9v1"
          />
          <path
            d="M3 14v1"
          />
          <path
            d="M21 14v1"
          />
        </svg>
      </span>
    </div>
    <span
      class="flex-1 text-sm text-input-text"
    >
      <span
        class="font-medium"
      >
        Opção
      </span>
    </span>
  </label>
</div>
`;

exports[`Input > snapshot: input padrão 1`] = `
<div>
  <input
    class="w-full rounded-md border border-input-border bg-input-bg px-4 py-3 text-base text-input-text placeholder:text-text-zinc-400/80 shadow-inner transition-all duration-200 ease-in-out hover:border-border-strong focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-focus-ring focus-visible:ring-offset-2 focus-visible:ring-offset-surface-glass data-[invalid]:border-destructive data-[invalid]:focus-visible:ring-destructive"
    placeholder="Email"
    type="text"
  />
</div>
`;

exports[`Radio > snapshot: radio não selecionado 1`] = `
<div>
  <label
    class="group flex items-start gap-3 rounded-md border border-input-border bg-input-bg px-4 py-3 transition-all duration-200 ease-in-out hover:border-border-strong hover:bg-input-bg cursor-pointer"
    for="test-radio"
  >
    <div
      class="relative mt-1 flex h-5 w-5 items-center justify-center"
    >
      <input
        class="absolute inset-0 z-10 w-full h-full opacity-0 cursor-pointer peer"
        id="test-radio"
        name="group"
        type="radio"
      />
      <span
        class="flex items-center justify-center transition-colors duration-200 peer-focus-visible:outline-none peer-focus-visible:ring-2 peer-focus-visible:ring-focus-ring peer-focus-visible:ring-offset-2 peer-focus-visible:ring-offset-surface-glass text-input-text"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-dashed h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.1 2.182a10 10 0 0 1 3.8 0"
          />
          <path
            d="M13.9 21.818a10 10 0 0 1-3.8 0"
          />
          <path
            d="M17.609 3.721a10 10 0 0 1 2.69 2.7"
          />
          <path
            d="M2.182 13.9a10 10 0 0 1 0-3.8"
          />
          <path
            d="M20.279 17.609a10 10 0 0 1-2.7 2.69"
          />
          <path
            d="M21.818 10.1a10 10 0 0 1 0 3.8"
          />
          <path
            d="M3.721 6.391a10 10 0 0 1 2.7-2.69"
          />
          <path
            d="M6.391 20.279a10 10 0 0 1-2.69-2.7"
          />
        </svg>
      </span>
    </div>
    <span
      class="flex-1 text-sm text-input-text"
    >
      <span
        class="font-medium"
      >
        Opção A
      </span>
    </span>
  </label>
</div>
`;

exports[`Radio > snapshot: radio selecionado 1`] = `
<div>
  <label
    class="group flex items-start gap-3 rounded-md border border-input-border bg-input-bg px-4 py-3 transition-all duration-200 ease-in-out hover:border-border-strong hover:bg-input-bg cursor-pointer"
    for="test-radio-checked"
  >
    <div
      class="relative mt-1 flex h-5 w-5 items-center justify-center"
    >
      <input
        checked=""
        class="absolute inset-0 z-10 w-full h-full opacity-0 cursor-pointer peer"
        id="test-radio-checked"
        name="group"
        readonly=""
        type="radio"
      />
      <span
        class="flex items-center justify-center transition-colors duration-200 peer-focus-visible:outline-none peer-focus-visible:ring-2 peer-focus-visible:ring-focus-ring peer-focus-visible:ring-offset-2 peer-focus-visible:ring-offset-surface-glass text-accent-lime"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-dot h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <circle
            cx="12"
            cy="12"
            r="1"
          />
        </svg>
      </span>
    </div>
    <span
      class="flex-1 text-sm text-input-text"
    >
      <span
        class="font-medium"
      >
        Opção Selecionada
      </span>
    </span>
  </label>
</div>
`;

exports[`Textarea > snapshot: textarea padrão 1`] = `
<div>
  <textarea
    class="w-full rounded-md border border-input-border bg-input-bg px-4 py-3 text-base text-input-text placeholder:text-text-zinc-400/80 shadow-inner transition-all duration-200 ease-in-out hover:border-border-strong focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-focus-ring focus-visible:ring-offset-2 focus-visible:ring-offset-surface-glass data-[invalid]:border-destructive data-[invalid]:focus-visible:ring-destructive"
    placeholder="Descrição"
    rows="5"
  />
</div>
`;
